--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"/>
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
+  <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -487,6 +488,31 @@
     </div>
   </section>
 
-</body>
+  <!-- REWARDS -->
+  <section class="rewards">
+    <div class="bg-left"></div>
+    <div class="bg-right"></div>
+    <div class="inner">
 
+      <div class="btn-group">
+        <!-- 버튼 반전된 스타일  -->
+        <div class="btn btn--reverse sign-up">회원가입</div>
+        <div class="btn sign-in">로그인</div>
+        <div class="btn gift">e-Gift 선물하기</div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="youtube">
+    <div class="youtube__area">
+      <!-- 클래스는 중복 가능한 이름, 아이디는 고유한 이름 -->
+      <div id="player"></div>
+
+
+    </div>
+    <div class="youtube__cover"></div>
+  </section>
+
+</body>
 </html>
