--- a/index.html
+++ b/index.html
@@ -508,10 +508,15 @@
     <div class="youtube__area">
       <!-- 클래스는 중복 가능한 이름, 아이디는 고유한 이름 -->
       <div id="player"></div>
-
-
     </div>
     <div class="youtube__cover"></div>
+    <div class="inner">
+
+      <img src="./images/floating1.png" alt="Icon" class="floating floating1">
+      <img src="./images/floating2.png" alt="Icon" class="floating floating2">
+      <img src="./images/floating3.png" alt="Icon" class="floating floating3">
+
+    </div>
   </section>
 
 </body>
